--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   rxdart: ^0.25.0
   equatable: ^1.2.5
   flutter_bloc: ^6.1.1
+  scrollable_positioned_list: ^0.1.8
 
 dev_dependencies:
   flutter_test:
