--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   equatable: ^1.2.5
   flutter_bloc: ^6.1.1
   scrollable_positioned_list: ^0.1.8
+  bottom_navy_bar: ^5.6.0
 
 dev_dependencies:
   flutter_test:
