--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_bloc: ^6.1.1
   scrollable_positioned_list: ^0.1.8
   bottom_navy_bar: ^5.6.0
+  cached_network_image: ^2.5.0
 
 dev_dependencies:
   flutter_test:
