--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   scrollable_positioned_list: ^0.1.8
   bottom_navy_bar: ^5.6.0
   cached_network_image: ^2.5.0
+  extended_image: ^1.5.0
+  bottom_drawer: ^0.0.2
+  modal_bottom_sheet: ^1.0.0+1
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
