--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hive_flutter: ^0.3.1
   path_provider: ^1.6.27
   archive: ^2.0.13
+  cached_network_image: ^2.5.0
 
 dev_dependencies:
   flutter_test:
