--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -27,34 +27,33 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  flutter_webview_plugin: ^0.3.11
-  http: ^0.12.2
-  dio: ^3.0.10
-  rxdart: ^0.25.0
-  equatable: ^1.2.5
-  flutter_bloc: ^6.1.1
+  flutter_webview_plugin: ^0.4.0
+  http: ^0.13.3
+  dio: ^4.0.0
+  rxdart: ^0.27.2
+  equatable: ^2.0.3
+  flutter_bloc: ^7.2.0
   scrollable_positioned_list: ^0.1.8
-  bottom_navy_bar: ^5.6.0
-  extended_image: ^1.5.0
-  modal_bottom_sheet: ^1.0.0+1
-  hive: ^1.4.4+1
-  hive_flutter: ^0.3.1
-  path_provider: ^1.6.27
-  cached_network_image: ^2.5.0
+  bottom_navy_bar: ^6.0.0
+  extended_image: ^4.1.0
+  modal_bottom_sheet: ^2.0.0
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.3
+  cached_network_image: ^3.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive_generator: ^0.8.2
-  build_runner: ^1.10.12
-
+  hive_generator: ^1.1.0
+  build_runner: ^2.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -64,7 +63,7 @@ flutter:
   assets:
     - assets/images/404.png
     - assets/images/default_image.jpeg
-#    - images/a_dot_ham.jpeg
+  #    - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
