--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,3 +1,5 @@
+include: package:pedantic/analysis_options.1.11.0.yaml
+
 linter:
   rules:
     - annotate_overrides
@@ -71,3 +73,4 @@ linter:
     - unrelated_type_equality_checks
     - use_rethrow_when_possible
     - valid_regexps
+    - prefer_relative_imports
