--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -33,7 +33,7 @@ dependencies:
   rxdart: ^0.27.2
   equatable: ^2.0.3
   flutter_bloc: ^7.2.0
-  scrollable_positioned_list: ^0.1.8
+  scrollable_positioned_list: ^0.2.0-nullsafety.0
   bottom_navy_bar: ^6.0.0
   extended_image: ^4.1.0
   modal_bottom_sheet: ^2.0.0
@@ -46,6 +46,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  pedantic: ^1.11.0
   hive_generator: ^1.1.0
   build_runner: ^2.1.2
 
