--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.0.3
   cached_network_image: ^3.1.0
   intl: ^0.17.0
+  html: ^0.15.0
 
 dev_dependencies:
   flutter_test:
@@ -85,11 +86,3 @@ flutter:
           style: italic
         - asset: assets/fonts/OpenSans-Bold.ttf
           weight: 600
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
