--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   flutter_bloc: ^7.2.0
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   bottom_navy_bar: ^6.0.0
-  extended_image: ^4.1.0
   modal_bottom_sheet: ^2.0.0
   hive: ^2.0.4
   hive_flutter: ^1.1.0
@@ -43,6 +42,7 @@ dependencies:
   cached_network_image: ^3.1.0
   intl: ^0.17.0
   html: ^0.15.0
+  photo_view: ^0.12.0
 
 dev_dependencies:
   flutter_test:
