--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   dio: ^4.0.4
-  flutter_webview_plugin: ^0.4.0
+  # flutter_webview_plugin: ^0.4.0
   rxdart: ^0.27.3
   equatable: ^2.0.3
   flutter_bloc: ^8.0.1
@@ -26,7 +26,7 @@ dependencies:
   cached_network_image: ^3.2.0
   intl: ^0.17.0
   html: ^0.15.0
-  photo_view: ^0.11.0
+  photo_view: ^0.13.0
 
 dev_dependencies:
   flutter_test:
