--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   scrollable_positioned_list: ^0.2.3
   bottom_navy_bar: ^6.0.0
-  modal_bottom_sheet: ^2.0.0
+  snapping_sheet: ^3.1.0
   hive: ^2.0.5
   hive_flutter: ^1.1.0
   path_provider: ^2.0.3
