--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,22 +11,35 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.0
-  dio: ^4.0.4
-  # flutter_webview_plugin: ^0.4.0
-  rxdart: ^0.27.3
-  equatable: ^2.0.3
-  flutter_bloc: ^8.0.1
-  scrollable_positioned_list: ^0.2.3
-  bottom_navy_bar: ^6.0.0
-  snapping_sheet: ^3.1.0
-  hive: ^2.0.5
-  hive_flutter: ^1.1.0
-  path_provider: ^2.0.3
-  cached_network_image: ^3.2.0
-  intl: ^0.17.0
+
+  # UI
   html: ^0.15.0
   photo_view: ^0.13.0
+  bottom_navy_bar: ^6.0.0
+  snapping_sheet: ^3.1.0
+  cached_network_image: ^3.2.0
+
+  # State management
+  flutter_bloc: ^8.0.1
+
+  # Caching
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
+
+  # Value equality
+  equatable: ^2.0.3
+
+  # Functional programming
+  dartz: ^0.10.1
+
+  # Remote API
+  dio: ^4.0.4
+
+  # Misc
+  rxdart: ^0.27.3
+  path_provider: ^2.0.3
+  intl: ^0.17.0
+  scrollable_positioned_list: ^0.2.3
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +58,16 @@ flutter:
   fonts:
     - family: BeVietnamPro
       fonts:
-        - asset: assets/fonts/BeVietnamPro-Bold.ttf
-        - asset: assets/fonts/BeVietnamPro-Light.ttf
         - asset: assets/fonts/BeVietnamPro-Regular.ttf
+        - asset: assets/fonts/BeVietnamPro-Light.ttf
+          weight: 300
+        - asset: assets/fonts/BeVietnamPro-Medium.ttf
+          weight: 500
         - asset: assets/fonts/BeVietnamPro-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/BeVietnamPro-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/BeVietnamPro-Black.ttf
+          weight: 900
+        - asset: assets/fonts/BeVietnamPro-Italic.ttf
+          style: italic
