--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.16.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -52,6 +52,7 @@ dev_dependencies:
   hive_generator: ^1.1.2
   build_runner: ^2.1.7
   injectable_generator: ^1.5.3
+  flutter_lints: ^1.0.0
 
 flutter:
   uses-material-design: true
