--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
 
   # UI
   html: ^0.15.0
-  photo_view: ^0.13.0
   bottom_navy_bar: ^6.0.0
   snapping_sheet: ^3.1.0
   cached_network_image: ^3.2.0
@@ -70,6 +69,12 @@ dev_dependencies:
 
 dependency_overrides:
   analyzer: ^3.0.0
+  
+  # UI
+  photo_view:
+    git:
+      url: https://github.com/bluefireteam/photo_view
+      ref: master
 
 flutter:
   uses-material-design: true
