--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   # Remote API
   dio: ^4.0.4
+  pretty_dio_logger: ^1.1.1
 
   # Dependency Injection
   get_it: ^7.2.0
@@ -47,9 +48,11 @@ dependencies:
   intl: ^0.17.0
   scrollable_positioned_list: ^0.2.3
 
-  # logger
-  pretty_dio_logger: ^1.1.1
-  logger: ^1.1.0
+  # Info package
+  package_info_plus: ^1.4.2
+
+  # Network
+  connectivity_plus: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +72,7 @@ dev_dependencies:
 
 dependency_overrides:
   analyzer: ^3.0.0
-  
+
   # UI
   photo_view:
     git:
