--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,8 +43,9 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.irohasu"
-        minSdkVersion flutter.minSdkVersion
+        applicationId "com.viviethoang9.irohasu"
+        compileSdkVersion 33
+        minSdkVersion 19
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
