--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
 
   # Remote API
   dio: ^4.0.4
-  pretty_dio_logger: ^1.1.1
 
   # Dependency Injection
   get_it: ^7.2.0
@@ -50,9 +49,23 @@ dependencies:
 
   # Info package
   package_info_plus: ^1.4.2
+  device_info: ^2.0.3
 
   # Network
-  connectivity_plus: ^2.3.0
+  connectivity_plus: ^2.3.6
+
+  # Download file
+  flutter_downloader: ^1.7.4
+
+  # Markdown renderer
+  flutter_markdown: ^0.6.10
+
+  # Permission app
+  permission_handler: ^10.0.0
+
+  # Logger
+  pretty_dio_logger: ^1.1.1
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
