vendor: Say hello flutter 3.0

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,10 @@
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  exclude:
+    - "**/*.g.dart"
+    - "**/*.config.dart"
+
 linter:
   rules:
     - annotate_overrides
