--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   path_provider: ^2.0.11
   intl: ^0.17.0
   scrollable_positioned_list: ^0.3.2
+  collection: ^1.16.0
 
   # Info package
   package_info_plus: ^1.4.2
