--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: "none"
 version: 0.5.0
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -16,19 +16,19 @@ dependencies:
   html: ^0.15.0
   bottom_navy_bar: ^6.0.0
   snapping_sheet: ^3.1.0
-  cached_network_image: ^3.2.0
+  cached_network_image: ^3.2.2
   photo_view: ^0.14.0
 
   # State management
-  bloc: ^8.0.3
-  flutter_bloc: ^8.0.1
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
 
   # Caching
   hive: ^2.2.3
   hive_flutter: ^1.1.0
 
   # Value equality
-  equatable: ^2.0.3
+  equatable: ^2.0.5
 
   # Functional programming
   dartz: ^0.10.1
@@ -41,25 +41,25 @@ dependencies:
   injectable: ^1.5.3
 
   # Dart data class
-  json_serializable: ^6.3.1
+  json_serializable: ^6.3.2
   json_annotation: ^4.6.0
 
   # Misc
   rxdart: ^0.27.5
   path_provider: ^2.0.11
   intl: ^0.17.0
-  scrollable_positioned_list: ^0.3.2
+  scrollable_positioned_list: ^0.3.4
   collection: ^1.16.0
 
   # Info package
-  package_info_plus: ^1.4.2
+  package_info_plus: ^1.4.3+1
   device_info: ^2.0.3
 
   # Network
-  connectivity_plus: ^2.3.6
+  connectivity_plus: ^2.3.6+1
 
   # Download file
-  flutter_downloader: ^1.7.4
+  flutter_downloader: ^1.8.3+2
 
   # Markdown renderer
   flutter_markdown: ^0.6.10+3
@@ -77,18 +77,15 @@ dev_dependencies:
 
   # Code generators
   hive_generator: ^1.1.3
-  build_runner: ^2.2.0
+  build_runner: ^2.2.1
   injectable_generator: ^1.5.4
 
   # Linting
   flutter_lints: ^2.0.1
 
   # Testing
-  bloc_test: ^9.0.3
+  bloc_test: ^9.1.0
   mocktail: ^0.3.0
-
-dependency_overrides:
-  analyzer: ^3.0.0
 
 flutter:
   uses-material-design: true
