--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,10 @@ description: A new Flutter project.
 
 publish_to: "none"
 
-version: 0.5.0
+version: 0.7.0
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=2.18.1 <3.0.0"
 
 dependencies:
   flutter:
@@ -24,9 +24,13 @@ dependencies:
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
 
-  # Caching
+  # Hive
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+
+  # Isar
+  isar: ^3.0.2
+  isar_flutter_libs: ^3.0.2
 
   # Value equality
   equatable: ^2.0.5
@@ -42,8 +46,8 @@ dependencies:
   injectable: ^1.5.3
 
   # Dart data class
-  json_serializable: ^6.3.2
-  json_annotation: ^4.6.0
+  json_serializable: ^6.4.0
+  json_annotation: ^4.7.0
 
   # Misc
   rxdart: ^0.27.5
@@ -57,16 +61,16 @@ dependencies:
   device_info: ^2.0.3
 
   # Network
-  connectivity_plus: ^2.3.6+1
+  connectivity_plus: ^2.3.7
 
   # Download file
-  flutter_downloader: ^1.8.3+2
+  flutter_downloader: ^1.8.4
 
   # Markdown renderer
   flutter_markdown: ^0.6.10+3
 
   # Permission app
-  permission_handler: ^10.0.0
+  permission_handler: ^10.0.1
 
   # Logger
   pretty_dio_logger: ^1.1.1
@@ -77,7 +81,8 @@ dev_dependencies:
     sdk: flutter
 
   # Code generators
-  hive_generator: ^1.1.3
+  # hive_generator: ^1.1.3
+  isar_generator: ^3.0.2
   build_runner: ^2.2.1
   injectable_generator: ^1.5.4
 
