--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,10 @@ description: A new Flutter project.
 
 publish_to: "none"
 
-version: 0.5.0
+version: 0.9.0
 
 environment:
-  sdk: ">=2.19.0 <3.0.0"
+  sdk: '>=3.2.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -42,8 +42,8 @@ dependencies:
 
   # Dart data class
   json_serializable: ^6.3.1
-  json_annotation: ^4.6.0
-
+  json_annotation: ^4.8.1
+  
   # Misc
   rxdart: ^0.27.5
   path_provider: ^2.0.11
@@ -70,6 +70,7 @@ dependencies:
   # Logger
   pretty_dio_logger: ^1.1.1
   logger: ^1.1.0
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
@@ -77,7 +78,7 @@ dev_dependencies:
 
   # Code generators
   hive_generator: ^1.1.3
-  build_runner: ^2.2.0
+  build_runner: ^2.4.7
   injectable_generator: ^1.5.4
 
   # Linting
@@ -86,10 +87,11 @@ dev_dependencies:
   # Testing
   bloc_test: ^9.0.3
   mocktail: ^0.3.0
+  freezed: ^2.4.5
 
 dependency_overrides:
   analyzer: ^3.0.0
-
+    
 flutter:
   uses-material-design: true
 
