--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,15 +13,15 @@ dependencies:
     sdk: flutter
 
   # UI
-  html: ^0.15.0
+  html: ^0.15.4
   bottom_navy_bar: ^6.0.0
   snapping_sheet: ^3.1.0
   cached_network_image: ^3.3.0
   photo_view: ^0.14.0
 
   # State management
-  bloc: ^8.0.3
-  flutter_bloc: ^8.0.1
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
 
   # Caching
   hive: ^2.2.3
@@ -34,11 +34,11 @@ dependencies:
   dartz: ^0.10.1
 
   # Remote API
-  dio: ^4.0.6
+  dio: ^5.4.0
 
   # Dependency Injection
-  get_it: ^7.2.0
-  injectable: ^1.5.3
+  get_it: ^7.6.4
+  injectable: ^2.3.2
 
   # Dart data class
   json_serializable: ^6.3.1
@@ -47,7 +47,7 @@ dependencies:
   # Misc
   rxdart: ^0.27.5
   path_provider: ^2.0.11
-  intl: ^0.17.0
+  intl: ^0.18.1
   scrollable_positioned_list: ^0.3.2
   collection: ^1.16.0
 
@@ -56,7 +56,7 @@ dependencies:
   device_info: ^2.0.3
 
   # Network
-  connectivity_plus: ^2.3.6
+  connectivity_plus: ^5.0.2
 
   # Download file
   flutter_downloader: ^1.7.4
@@ -65,11 +65,11 @@ dependencies:
   flutter_markdown: ^0.6.10+3
 
   # Permission app
-  permission_handler: ^10.0.0
+  permission_handler: ^11.1.0
 
   # Logger
-  pretty_dio_logger: ^1.1.1
-  logger: ^1.1.0
+  pretty_dio_logger: ^1.3.1
+  logger: ^2.0.2+1
   freezed_annotation: ^2.4.1
 
 dev_dependencies:
@@ -77,20 +77,17 @@ dev_dependencies:
     sdk: flutter
 
   # Code generators
-  hive_generator: ^1.1.3
+  hive_generator: ^2.0.1
   build_runner: ^2.4.7
-  injectable_generator: ^1.5.4
+  injectable_generator: ^2.4.1
 
   # Linting
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.1
 
   # Testing
   bloc_test: ^9.0.3
-  mocktail: ^0.3.0
+  mocktail: ^1.0.1
   freezed: ^2.4.5
-
-dependency_overrides:
-  analyzer: ^3.0.0
     
 flutter:
   uses-material-design: true
