--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,8 @@ dependencies:
   intl: ^0.18.1
   scrollable_positioned_list: ^0.3.2
   collection: ^1.16.0
-
+  infinite_scroll_pagination: ^4.0.0
+  
   # Info package
   package_info_plus: ^5.0.1
   device_info: ^2.0.3
